--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,12 @@ button::-moz-focus-inner {
   border: 0;
 }
 
+.error {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
+
 /* ### GLOBAL CREATE FORMS ### */
 
 .required-field {
